Successful creation of logins via email authentication.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,14 +7,16 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<form>
+<div>
+    <h3>Create User</h3>
+    <input type="text" id="logCreate" name="userCreate" placeholder="user" />
+    <input type="text" id="passCreate" name="passwordCreate" placeholder="pass" />
+    <button id="create">Submit</button>
+</div>
 
-    <input type="text" id="log" name="user" placeholder="user" />
-    <input type="text" id="pass" name="password" placeholder="pass" />
+<div>
+    <h3>Login</h3>
+    <input type="text" id="logIn" name="userIn" placeholder="user" />
+    <input type="text" id="passIn" name="passwordIn" placeholder="pass" />
     <button id="login">Submit</button>
-
-</form>
-
-<button id="sendsms">Send sms</button>
-<button id="sendemail">Send email</button>
-<button id ="adddata">Add data</button>
+</div>
