Added backend and js for adding and getting data Trying to keep it reusable

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -12,4 +12,5 @@
     <button id="sendsms">Send sms</button>
     <button id="sendemail">Send email</button>
     <button id="adddata">Add data</button>
+    <button id="getdata">get data</button>
 </div>
