--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,22 +1,29 @@
-﻿@{
+﻿@model HeyDo.Models.Auth
+
+@{
     ViewData["Title"] = "Home Page";
 }
+<div class="log">
+    <div class="Login">
+        <div>
+            <h3>Login</h3>
+            <input type="text" id="logIn" name="userIn" placeholder="user" />
+            <input type="text" id="passIn" name="passwordIn" placeholder="pass" />
+            <button id="login">Submit</button>
+        </div>
+        <span id="createLog">Or create a login</span>
+    </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="Create" style="display: none">
+        <div >
+            <h3>Create User</h3>
+            <input type="text" id="logCreate" name="userCreate" placeholder="user" />
+            <input type="text" id="passCreate" name="passwordCreate" placeholder="pass" />
+            <button id="create">Submit</button>
+        </div>
+        <span id="reallyLog">Or log in</span>
+    </div>
 </div>
 
-<div>
-    <h3>Create User</h3>
-    <input type="text" id="logCreate" name="userCreate" placeholder="user" />
-    <input type="text" id="passCreate" name="passwordCreate" placeholder="pass" />
-    <button id="create">Submit</button>
-</div>
+<div class="Dashboard"></div>
 
-<div>
-    <h3>Login</h3>
-    <input type="text" id="logIn" name="userIn" placeholder="user" />
-    <input type="text" id="passIn" name="passwordIn" placeholder="pass" />
-    <button id="login">Submit</button>
-</div>
