--- a/Views/Home/ViewTasks.cshtml
+++ b/Views/Home/ViewTasks.cshtml
@@ -7,7 +7,7 @@
 <h1>ViewTasks</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="NewTask">Add a Task</a>
 </p>
 <table class="table">
     <thead>
@@ -43,9 +43,9 @@
                 @Html.DisplayFor(modelItem => item.TaskDetails)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "EditTask", new { id=item.Id }) |
+                @Html.ActionLink("Details", "ViewHistory", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "DeleteTask", new { id=item.Id })
             </td>
         </tr>
 }
