--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -5,8 +5,9 @@
     <h1>Dashboard</h1>
     <div>
         <ul>
-            <li id="newUser">@Html.ActionLink("Add User","NewUser","Home")</li>
+            <li id="newUser">@Html.ActionLink("Add User", "NewUser", "Home")</li>
             <li id="newTask">@Html.ActionLink("Add Task", "NewTask", "Home")</li>
+            <li id="assignTask">@Html.ActionLink("Assign Task", "AssignTask", "Home")</li>
         </ul>
     </div>
     <div>
