--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div>
             <h3>Login</h3>
             <input type="text" id="logIn" name="userIn" placeholder="user" />
-            <input type="text" id="passIn" name="passwordIn" placeholder="pass" />
+            <input type="password" id="passIn" name="passwordIn" placeholder="pass" />
             <button id="login">Submit</button>
         </div>
         <span id="createLog">Or create a login</span>
@@ -18,7 +18,7 @@
         <div >
             <h3>Create User</h3>
             <input type="text" id="logCreate" name="userCreate" placeholder="user" />
-            <input type="text" id="passCreate" name="passwordCreate" placeholder="pass" />
+            <input type="password" id="passCreate" name="passwordCreate" placeholder="pass" />
             <button id="create">Submit</button>
         </div>
         <span id="reallyLog">Or log in</span>
