Added functionality to resend a notification from the history screen

--- a/Views/Home/ViewHistory.cshtml
+++ b/Views/Home/ViewHistory.cshtml
@@ -78,6 +78,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.CompletedDateTime)
             </td>
+            <td>@Html.ActionLink("Resend task","ResendTask", new {id = item.Id})</td>
         </tr>
 }
     </tbody>
