Added configuration app settings

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HeyDo.Models.Auth
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = ViewBag.Title;
 }
 <div class="log">
     <div class="Login">
