--- a/Views/Home/ViewUsers.cshtml
+++ b/Views/Home/ViewUsers.cshtml
@@ -13,9 +13,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
@@ -39,9 +36,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
+
+                @Html.HiddenFor(modelItem => item.Id)
+
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
             </td>
