--- a/Views/Home/ViewHistory.cshtml
+++ b/Views/Home/ViewHistory.cshtml
@@ -36,44 +36,54 @@
             <th>
                 @Html.DisplayNameFor(model => model.AssignedDateTime)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CompletedDateTime)
-            </th>
+            @if (Model.Any(u => u.Complete))
+            {
+                <th>
+                    @Html.DisplayNameFor(model => model.CompletedDateTime)
+                </th>
+            }
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
+@foreach (var item in Model)
+{
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.TaskId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Complete)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.SendTime)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Passed)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UserIdAssigned)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ContactMethod)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ActionTaken)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AssignedDateTime)
+        </td>
+        @if (Model.Any(u => u.Complete))
+        {
             <td>
-                @Html.DisplayFor(modelItem => item.TaskId)
+                @if (item.Complete)
+                {
+                    @Html.DisplayFor(modelItem => item.CompletedDateTime)
+                }
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Complete)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SendTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Passed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserIdAssigned)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactMethod)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ActionTaken)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AssignedDateTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CompletedDateTime)
-            </td>
-            <td>@Html.ActionLink("Resend task","ResendTask", new {id = item.Id})</td>
-        </tr>
+        }
+        <td>@Html.ActionLink("Resend task", "ResendTask", new {id = item.Id})</td>
+    </tr>
 }
     </tbody>
 </table>
