--- a/Views/Home/EditTask.cshtml
+++ b/Views/Home/EditTask.cshtml
@@ -14,8 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <br /><select asp-for="UserId" class="form-control" asp-items=ViewBag.UserIdList></select>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
