Added some basic filtering for sent tasks

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -14,7 +14,7 @@
         <ul>
             <li id="viewUsers">@Html.ActionLink("View Users", "ViewUsers", "Home")</li>
             <li id="viewTasks">@Html.ActionLink("View Tasks", "ViewTasks", "Home")</li>
-            <li id="viewHistory">@Html.ActionLink("View History", "ViewHistory", "Home")</li>
+            <li id="viewHistory">@Html.ActionLink("View History", "HistoryDashboard", "Home")</li>
         </ul>
     </div>
 </div>
