--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -19,5 +19,5 @@
     </div>
 </div>
 
-@Context.Request.Cookies["uid"].ToString()
-@Context.Request.Cookies["token"].ToString()
+@Context.Request.Cookies["uid"]
+@Context.Request.Cookies["token"]
