--- a/Views/Home/HistoryDashboard.cshtml
+++ b/Views/Home/HistoryDashboard.cshtml
@@ -47,13 +47,13 @@
             $("#userList").toggle();
             $("#taskList").hide();
             $("#taskCheck").prop("checked", false);
-            $("#taskSelectList").val("0");
+            $("#taskSelectList").val("");
         })
         $("#taskCheck").click(function() {
             $("#taskList").toggle();
             $("#userList").hide();
             $("#userCheck").prop("checked", false);
-            $("#userSelectList").val("0");
+            $("#userSelectList").val("");
         })
     </script>
 }
