Reworked views to show more user readable info

--- a/Views/Home/ViewTasks.cshtml
+++ b/Views/Home/ViewTasks.cshtml
@@ -18,9 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.TaskDetails)
             </th>
-            <td>
-                @Html.DisplayNameFor(model => model.UserId)
-            </td>
+            <th>
+                Assigned User
+            </th>
             <th></th>
         </tr>
     </thead>
