--- a/Views/Home/ViewHistory.cshtml
+++ b/Views/Home/ViewHistory.cshtml
@@ -13,25 +13,28 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TaskId)
+                Task
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Complete)
-            </th>
+            @if (Model.Any(u => u.Complete))
+            {
+                <th>
+                    @Html.DisplayNameFor(model => model.Complete)
+                </th>
+            }
             <th>
                 @Html.DisplayNameFor(model => model.SendTime)
             </th>
+            @if (Model.Any(u => u.Passed))
+            {
+                <th>
+                    @Html.DisplayNameFor(model => model.Passed)
+                </th>
+            }
             <th>
-                @Html.DisplayNameFor(model => model.Passed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserIdAssigned)
+                User Assigned
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ContactMethod)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ActionTaken)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AssignedDateTime)
@@ -46,44 +49,47 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model)
-{
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TaskId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Complete)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SendTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Passed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserIdAssigned)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContactMethod)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ActionTaken)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AssignedDateTime)
-        </td>
-        @if (Model.Any(u => u.Complete))
+        @foreach (var item in Model)
         {
-            <td>
-                @if (item.Complete)
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TaskId)
+                </td>
+                @if (Model.Any(u => u.Complete))
                 {
-                    @Html.DisplayFor(modelItem => item.CompletedDateTime)
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Complete)
+                    </td>
                 }
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SendTime)
+                </td>
+                @if (Model.Any(u => u.Passed))
+                {
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Passed)
+                    </td>
+                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserIdAssigned)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ContactMethod)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AssignedDateTime)
+                </td>
+                @if (Model.Any(u => u.Complete))
+                {
+                    <td>
+                        @if (item.Complete)
+                        {
+                            @Html.DisplayFor(modelItem => item.CompletedDateTime)
+                        }
+                    </td>
+                }
+                <td>@Html.ActionLink("Resend task", "ResendTask", new { id = item.Id })</td>
+            </tr>
         }
-        <td>@Html.ActionLink("Resend task", "ResendTask", new {id = item.Id})</td>
-    </tr>
-}
     </tbody>
 </table>
