--- a/Views/Home/ViewHistory.cshtml
+++ b/Views/Home/ViewHistory.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HeyDo.Models.Usertask>
 
 @{
-    ViewData["Title"] = "ViewHistory";
+    ViewData["Title"] = "View History";
 }
 
-<h1>ViewHistory</h1>
+<h1>View Task History</h1>
 
 <p>
     <a asp-action="AssignTask">Assign a Task</a>
