Getting ideas for scheduling tasks and adding some helper functions

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -7,7 +7,8 @@
         <ul>
             <li id="newUser">@Html.ActionLink("Add User", "NewUser", "Home")</li>
             <li id="newTask">@Html.ActionLink("Add Task", "NewTask", "Home")</li>
-            <li id="assignTask">@Html.ActionLink("Assign Task", "AssignTask", "Home")</li>
+            <li id="assignTask">@Html.ActionLink("Assign Single Task", "AssignTask", "Home")</li>
+            <li id="scheduleTask">@Html.ActionLink("Schedule Recurring Tasks", "SchedTask", "Home")</li>
         </ul>
     </div>
     <div>
