Successfully able to create recurring job Started skeleton of viewing schedules Enabled "test" mode in message controller so we're not sending messages while testing

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -16,6 +16,7 @@
             <li id="viewUsers">@Html.ActionLink("View Users", "ViewUsers", "Home")</li>
             <li id="viewTasks">@Html.ActionLink("View Tasks", "ViewTasks", "Home")</li>
             <li id="viewHistory">@Html.ActionLink("View History", "HistoryDashboard", "Home")</li>
+            <li id="viewSched">@Html.ActionLink("View Scheduled Tasks", "ViewSched", "Home")</li>
         </ul>
     </div>
 </div>
