Getting skeleton for being able to assign a group of tasks to group of users Added preferred send time (for use in these kinds of tasks)

--- a/Views/Home/ViewUsers.cshtml
+++ b/Views/Home/ViewUsers.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.ContactPreference)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ContactTime)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.email)
             </th>
             <th></th>
@@ -40,6 +43,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ContactPreference)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContactTime)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.email)
