--- a/Views/Home/EditUser.cshtml
+++ b/Views/Home/EditUser.cshtml
@@ -32,6 +32,11 @@
                 <br /><select asp-for="ContactPreference" class="form-control" asp-items=ViewBag.ContactPreference></select>
             </div>
             <div class="form-group">
+                <label asp-for="ContactTime" class="control-label"></label>
+                <input asp-for="ContactTime" type="time" class="form-control" />
+                <span asp-validation-for="ContactTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
                 <input asp-for="name" class="form-control" />
                 <span asp-validation-for="name" class="text-danger"></span>
