--- a/Views/Home/NewUser.cshtml
+++ b/Views/Home/NewUser.cshtml
@@ -29,7 +29,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="ContactPreference" class="control-label"></label>
-                <br/><select asp-for="ContactPreference" class="form-control" asp-items=ViewBag.ContactPreference></select>
+                <br /><select asp-for="ContactPreference" class="form-control" asp-items=ViewBag.ContactPreference></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ContactTime" class="control-label"></label>
+                <input asp-for="ContactTime" type="time" class="form-control" />
+                <span asp-validation-for="ContactTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="name" class="control-label"></label>
