got everything hooked up to be able to run random tasks moved most of the message logic into the messagescheduler

--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -9,6 +9,7 @@
             <li id="newTask">@Html.ActionLink("Add Task", "NewTask", "Home")</li>
             <li id="assignTask">@Html.ActionLink("Assign Single Task", "AssignTask", "Home")</li>
             <li id="scheduleTask">@Html.ActionLink("Schedule Recurring Tasks", "SchedTask", "Home")</li>
+            <li id="scheduleTask">@Html.ActionLink("Group recurring Tasks", "RandTask", "Home")</li>
         </ul>
     </div>
     <div>
