--- a/Views/Home/RandTask.cshtml
+++ b/Views/Home/RandTask.cshtml
@@ -7,6 +7,7 @@
 <h1>RandTask</h1>
 
 <h4>GroupTaskSchedule</h4>
+<h2>These tasks are assumed daily at the users preferred contact time and using their preferred contact method</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,6 +20,16 @@
             <div class="form-group">
                 <label asp-for="Tasks" class="control-label"></label>
                 <br /><select asp-for="Tasks" class="form-control" asp-items=ViewBag.Tasks></select>
+            </div>
+            <h4>Choose a time and select time override to use a specific time and not the users preferred contact time</h4>
+            <div class="form-group" id="time">
+                <label asp-for="Time" class="control-label"></label>
+                <input asp-for="Time" type="time" class="form-control" />
+                <span asp-validation-for="Time" class="text-danger"></span>
+            </div>
+            <div class="form-group" id="time">
+                <label asp-for="TimeOverride" class="control-label"></label>
+                <input asp-for="TimeOverride" type="checkbox" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
